--- a/netlify.toml
+++ b/netlify.toml
@@ -6,3 +6,14 @@
   from = "/*"
   to = "/index.html"
   status = 200
+
+[[headers]]
+  for = "/sw.bundle.js"
+    [headers.values]
+    Cache-Control = "no-cache"
+
+[[headers]]
+  for = "/*"
+    [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
